adds custom reward address
